kubernetes_networkPolicy.yaml
# by default - "all allow"
#Ingress - enter
#Egress - exit


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector: #network policy would be applied on
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: #network policy would allow connections from
    - podSelector:
        matchLabels:
          name: api-pod
      namespaceSelector:
        matchLabels:
          name: staging
    - ipBlock:
      cidr: 192.168.0.5/32
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to: #network policy would allow connections to
    - ipBlock:
      cidr: 192.168.0.5/32
    ports:
    - protocol: TCP
      port: 80
